--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 <body>
     <ul>
         {% for year in years %}
-            <li><a href="{{ '/html/%s.html'%year }}">{{ year }} </a></li>
+            <li><a href="{{ '/fof-scorigami/html/%s.html'%year }}">{{ year }} </a></li>
         {% endfor %}
     </ul>
 </body>
