Popup and index QOL

--- a/static/styles.css
+++ b/static/styles.css
@@ -4,6 +4,8 @@ table {
 }
 
 th, td {
+    width: 14px;
+    font-size: 12px;
     border: 1px solid #ddd;
     position: relative;
 }
@@ -23,13 +25,53 @@ td:hover::after {
     z-index: -1;
 }
 
-.green {
-	background-color: var(--color-primary);
-	color: white;
-	text-align: center;
-	cursor: pointer;
+ /* Popup container */
+.popup {
+  cursor: pointer;
 }
 
-.green.red {
-	background-color: var(--color-secondary);
+/* The actual popup (appears on top) */
+.popup .popuptext {
+  visibility: hidden;
+  width: 100px;
+  background-color: #555;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 8px 0;
+  position: absolute;
+  z-index: 1;
+  bottom: 125%;
+  left: 50%;
+  margin-left: -50px;
+}
+
+/* Popup arrow */
+.popup .popuptext::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #555 transparent transparent transparent;
+}
+
+/* Toggle this class when clicking on the popup container (hide and show the popup) */
+.popup .show {
+  visibility: visible;
+  -webkit-animation: fadeIn 1s;
+  animation: fadeIn 1s
+}
+
+/* Add animation (fade in the popup) */
+@-webkit-keyframes fadeIn {
+  from {opacity: 0;}
+  to {opacity: 1;}
+}
+
+@keyframes fadeIn {
+  from {opacity: 0;}
+  to {opacity:1 ;}
 }
